    Fix contributed by Roger Hu.

* Documented that Chords do not work well with redis-server versions
  before 2.2.

    Contributed by Dan McGee.

* The :setting:`CELERYBEAT_MAX_LOOP_INTERVAL` setting was not respected.

* ``inspect.registered_tasks`` renamed to ``inspect.tasks`` for naming
  consistency.

    The previous name is still available as an alias.

    Contributed by Mher Movsisyan

* RHEL init script: Changed celeryd startup priority.

    The default start / stop priorities for MySQL on RHEL are

        # chkconfig: - 64 36

    Therefore, if Celery is using a database as a broker / message store, it
    should be started after the database is up and running, otherwise errors
    will ensue. This commit changes the priority in the init script to

        # chkconfig: - 85 15

    which are the default recommended settings for 3-rd party applications
    and assure that Celery will be started after the database service & shut
    down before it terminates.

    Contributed by Yury V. Zaytsev.

* KeyValueStoreBackend.get_many did not respect the ``timeout`` argument
  (Issue #512).

* celerybeat/celeryev's --workdir option did not chdir before after
  configuration was attempted (Issue #506).

* After deprecating 2.4 support we can now name modules correctly, since we
  can take use of absolute imports.

    Therefore the following internal modules have been renamed:

        celery.concurrency.evlet    -> celery.concurrency.eventlet
        celery.concurrency.evg      -> celery.concurrency.gevent

* AUTHORS file is now sorted alphabetically.

    Also, as you may have noticed the contributors of new features/fixes are
    now mentioned in the Changelog.

.. _version-2.3.3:

2.3.3
=====
:release-date: 2011-16-09 05:00 P.M BST
:by: Mher Movsisyan

* Monkey patching :attr:`sys.stdout` could result in the worker
  crashing if the replacing object did not define :meth:`isatty`
  (Issue #477).
